--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="container-fluid">
                     <a class="navbar-brand">Super Biblioteca</a>
                     <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+                        <input id="search" class="form-control me-2" type="search" placeholder="🔍Cerca per titolo o autore" aria-label="Search" />
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
                 </div>
