--- a/books-detail/detail.html
+++ b/books-detail/detail.html
@@ -6,6 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Book Detail</title>
         <link rel="stylesheet" href="./detail.css">
+        <!-- bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        
+        <script type="module" src="./detail.js"></script>
+    </head>
     </head>
 
     <body>
@@ -15,7 +21,7 @@
                     <a class="navbar-brand" href="../">
                         <img id="img-navbar" src="../assets/reading-book.png" alt="Logo" width="30" height="24"
                             class="d-inline-block align-text-top img-navbar">
-                        <span id="book-title-nav"> </span>
+                        <span id="book-title-nav"> Super Biblioteca</span>
                     </a>
                 </div>
             </nav>
@@ -44,9 +50,7 @@
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the second item’s accordion body.</strong> It is hidden by default,
-                            until the collapse plugin adds the appropriate classes that we use to style each
-                            element. 
+
                         </div>
                     </div>
                 </div>
@@ -54,17 +58,12 @@
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Item #3
+                            Other info
                         </button>
                     </h2>
                     <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the third item’s accordion body.</strong> It is hidden by default, until
-                            the collapse plugin adds the appropriate classes that we use to style each element.
-                            These classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default
-                            variables. It’s also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+
                         </div>
                     </div>
                 </div>
